--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^10.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.32.0"
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0"
   }
 }
