--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
 		"ecmaVersion": 2021
 	},
 	"rules": {
-		"brace-style": ["error", "1tbs", { "allowSingleLine": true }],
+		"arrow-spacing": ["warn", { "before": true, "after": true }],
+		"brace-style": ["error", "stroustrup", { "allowSingleLine": true }],
 		"comma-dangle": ["error", "always-multiline"],
 		"comma-spacing": "error",
 		"comma-style": "error",
@@ -19,6 +20,7 @@
 		"dot-location": ["error", "property"],
 		"handle-callback-err": "off",
 		"indent": ["error", "tab"],
+		"keyword-spacing": "error",
 		"max-nested-callbacks": ["error", { "max": 4 }],
 		"max-statements-per-line": ["error", { "max": 2 }],
 		"no-console": "off",
