--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
-    "discord.js": "^12.5.3",
-    "dotenv": "^10.0.0"
+    "discord.js": "^13.5.0",
+    "dotenv": "^10.0.0",
+    "node-cron": "^3.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0"
   }
 }
