--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
-    "discord.js": "^13.5.0",
-    "dotenv": "^10.0.0",
+    "discord.js": "^13.6.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "node-cron": "^3.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0"
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0"
   }
 }
