--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "devDependencies": {
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0"
-  }
+  },
+  "scripts": {
+    "start": "node index.js"
+ }
 }
