--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "heroku": "^7.59.3",
     "node-cron": "^3.0.0"
   },
   "devDependencies": {
@@ -11,5 +12,5 @@
   },
   "scripts": {
     "start": "node index.js"
- }
+  }
 }
