--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
-    "discord.js": "^14.6.0",
-    "dotenv": "^16.0.3",
+    "discord.js": "^14.13.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "package.json": "^0.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0"
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0"
   },
   "scripts": {
     "start": "node index.js"
