--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "dependencies": {
-    "discord.js": "^14.13.0",
+    "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "node-cron": "^3.0.2",
-    "package.json": "^0.0.0"
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
-    "eslint": "^8.47.0",
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0"
   },
   "scripts": {
